Make sure we left align titles when ad link boxes are inside a centered thing

--- a/app/assets/stylesheets/_search_result_item.scss
+++ b/app/assets/stylesheets/_search_result_item.scss
@@ -33,6 +33,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         width: 74%;
+        text-align: left;
     }
 
     &__image-holder {
